Carta - Lead Product Manager, Data Platform. Job Application for Product Designer at Under Armour . Senior Product Manager (Integrations) at Elevate Security. Senior Product Manager (Integrations) at Elevate Security. Job Application for Principal Product Manager (OSP Now) at Ocado Group. Nobul - Product Designer. Sequoia Consulting Group - Salesforce Product Owner. Mitek Systems - Senior Product Manager. INNIO Careers - Service Product Manager. Job Application for Principal, Product Owner (FinTech Business & Systems) at Coupang. Spartan Race, Inc. Careers - Digital Product Manager. MORI Associates, Inc. Careers - NASA - Software Product Manager. TRICENTIS Product Owner SAP | SmartRecruiters. Job Application for Product Manager- Data Exchange at Snowflake. Job Application for Senior Product Manager, Managed Security  at Arctic Wolf Networks. Job Application for Technical Product Manager, SOC Platform at Arctic Wolf Networks. Tenable Careers - Senior Product Manager. Tenable Careers - Product Manager. Job Application for Product Manager, Internal Products at Discord. Buoy Health - Product Owner. Senior UI Product Designer - Total Expert - Career Page. Axon - Principal Product Manager - Axon Records.  Vivid Seats Careers - Product Manager / Senior Product Manager.     Lead Product Designer at interface.ai . Associate Product Manager - Neiman Marcus Group Careers Careers. Job Application for Lead Product Manager at Spell. Product Manager I - Sidecar - Career Page. Job Application for Senior Product Manager at Culture Amp. Product Owner - LeaseQuery - Career Page. Revolut - Product Designer - Wealth & Trading (copy).       Product Manager Internship - Helloprint     . MediaCom Careers - Business Intelligence Product Manager. Job Application for Product Manager (EMR/EHR) at Unite Us. Product Manager, Pro A/V (NewTek) - Vizrt - Career Page. Aroghia Group Product Owner for Global Sportswear Brand | SmartRecruiters. Aroghia Group Product Manager for Global Sportswear Brand 

--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/carta/dacbc491-26ea-4d98-ba04-855a2fc8d5db'>Carta - Lead Product Manager, Data Platform</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/connectedfitness/jobs/1939963'>Job Application for Product Designer at Under Armour </a></h5> 
+<p><span class="badge badge-light">Austin, TX</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://elevate-security.breezy.hr/p/6720092eab89-senior-product-manager-integrations'>Senior Product Manager (Integrations) at Elevate Security</a></h5> 
 <p><span class="badge badge-light">Berkeley, CA</span></p>
 <p>Posted on: 2019-11-01</p>
@@ -142,7 +150,7 @@
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cultureamp/jobs/1940954'>Job Application for Senior Product Manager at Culture Amp</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cultureamp/jobs/1940954'>Job Application for Senior Product Manager at Culture Amp</a></h5> 
 <p><span class="badge badge-light">Melbourne  Melbourne San Francisco New York London</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -150,11 +158,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/revolut/445aa98c-dd62-49ad-a217-f9f21c8c3bb1'>Revolut - Product Designer - Wealth & Trading (copy)</a></h5> 
+<h5><a href='https://jobs.lever.co/revolut/445aa98c-dd62-49ad-a217-f9f21c8c3bb1'>Revolut - Product Designer - Wealth & Trading (copy)</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://helloprint.recruitee.com/l/fr/o/product-manager-internship-rotterdam'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://helloprint.recruitee.com/l/fr/o/product-manager-internship-rotterdam'>
       Product Manager Internship - Helloprint
     </a></h5> 
 <p><span class="badge badge-light">Rotterdam</span></p>
@@ -192,7 +200,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boh.referrals.selectminds.com/jobs/cash-management-product-manager-3967'>Cash Management Product Manager - Bank of Hawaii Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boh.referrals.selectminds.com/jobs/cash-management-product-manager-3967'>Cash Management Product Manager - Bank of Hawaii Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -292,7 +300,7 @@
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ziprecruiter/jobs/1940172'>Job Application for Product Manager  at ZipRecruiter</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ziprecruiter/jobs/1940172'>Job Application for Product Manager  at ZipRecruiter</a></h5> 
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -316,7 +324,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698572380-senior-product-manager-mobile-f-m-d-'>lm group Senior Product Manager - Mobile (f/m/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698572380-senior-product-manager-mobile-f-m-d-'>lm group Senior Product Manager - Mobile (f/m/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -382,7 +390,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/digitaltradecareers/job/o8tpbfwV'>Department for International Trade  - Digital, Data and Technology Careers - Product Manager / Associate Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/digitaltradecareers/job/o8tpbfwV'>Department for International Trade  - Digital, Data and Technology Careers - Product Manager / Associate Product Manager</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -443,14 +451,6 @@
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/trek-bicycle-de/job/oN0rbfw9'>Trek Bicycle Karrieren?Trip Design Product Manager</a></h5> 
-<p><span class="badge badge-light">Madison, Wisconsin  Madison, Wisconsin</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/trek-bicycle/job/oN0rbfw9'>Trek Bicycle Careers - Trip Design Product Manager</a></h5> 
-<p><span class="badge badge-light">Madison, Wisconsin  Madison, Wisconsin</span></p>
-<p>Posted on: 2019-10-30</p>
 <hr/>
 
 
