--- a/full-stack.html
+++ b/full-stack.html
@@ -38,6 +38,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/concurrency/117a3b29-0fe7-4cbf-b6ec-136f1255ffc9'>Concurrency - Senior Full Stack Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/concurrency/75b0a699-6673-4327-8775-fba45b52d374'>Concurrency - Senior Full Stack Developer</a></h5> 
+<p><span class="badge badge-light">Minneapolis, MN</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/concurrency/9212761c-b51e-48f2-9be4-1beb99152e7e'>Concurrency - Senior Full Stack Developer</a></h5> 
+<p><span class="badge badge-light">Chicago, IL</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://www.prostaff.ch/de/jobs/19145'>Senior JAVA Fullstack Developer | PROSTAFF ? Swiss IT and Data Science Recruitment &amp; HR-Services</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
@@ -184,7 +196,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=oZisbfwE&__jvst=Employee&__jvsd=sHBeKgw1&__jvsc=Twitter&bid=nBZmpMwC'>Brandwatch Careers - Full Stack Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=oZisbfwE&__jvst=Employee&__jvsd=sHBeKgw1&__jvsc=Twitter&bid=nBZmpMwC'>Brandwatch Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light">Brighton, England</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -216,7 +228,7 @@
 <p><span class="badge badge-light">Mumbai Chennai, India  Mumbai</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Cineplex/743999698416569-senior-full-stack-software-developer'>Cineplex Senior Full Stack Software Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Cineplex/743999698416569-senior-full-stack-software-developer'>Cineplex Senior Full Stack Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -228,7 +240,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999698540696-full-stack-software-engineer-data-platform'>Traveloka Full Stack Software Engineer - Data Platform | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999698540696-full-stack-software-engineer-data-platform'>Traveloka Full Stack Software Engineer - Data Platform | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -244,11 +256,11 @@
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/hibrrc69q4uehngfgmr1tdpehh'>Senior Full Stack Software Engineer | CardinalHire</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/hibrrc69q4uehngfgmr1tdpehh'>Senior Full Stack Software Engineer | CardinalHire</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://movinga.join.com/jobs/467504-senior-fullstack-developer-m-w-d'>Job @ Movinga (Berlin): Senior Fullstack Developer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://movinga.join.com/jobs/467504-senior-fullstack-developer-m-w-d'>Job @ Movinga (Berlin): Senior Fullstack Developer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -274,7 +286,7 @@
 <p><span class="badge badge-light">Auckland New Zealand  Auckland Auckland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TheUniversityOfAuckland/743999698533519-senior-digital-developer-open-source-technologies-full-stack'>The University of Auckland Senior Digital Developer: Open Source Technologies - Full Stack | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TheUniversityOfAuckland/743999698533519-senior-digital-developer-open-source-technologies-full-stack'>The University of Auckland Senior Digital Developer: Open Source Technologies - Full Stack | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Auckland New Zealand  Auckland Auckland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -414,7 +426,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://login.hirelocker.com/hr-interventions-ltd/jobs/11424/full-stack-c-net-developer-lahinch?source=Twitter'>Full Stack C#.Net Developer - HRLocker - Lahinch | HireLocker.com</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://login.hirelocker.com/hr-interventions-ltd/jobs/11424/full-stack-c-net-developer-lahinch?source=Twitter'>Full Stack C#.Net Developer - HRLocker - Lahinch | HireLocker.com</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -444,18 +456,6 @@
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/LeoVegascom/743999698452521-full-stack-engineer'>LeoVegas.com Full Stack Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Stockholm, Sweden</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/beetalents/ec5e4f16-5238-45b1-b1b9-8c11545ce1a7'>Bee Talents - Fullstack RoR Developer - Pomar/Pixie [up to 17k PLN net B2B] (PL)</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=opqbbfwV&__jvst=Employee+Referral&__jvsd=sXKg3hwM&__jvsc=Twitter&bid=nK8coMwJ'>NICE Careers - Software Engineer - .NET Full Stack</a></h5> 
-<p><span class="badge badge-light">Austin, Texas  Austin, TX</span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/traegergrills/jobs/1932423'>Job Application for Full Stack Developer at Traeger Wood Pellet Grills</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
